# Pong-CPP

./: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake
Shaders/: fragment.frag  vertex.vert
include/: Game.hpp  GameObject.hpp  Window.hpp
libs/include/SDL2/: SDL_config.h  SDL_stdinc.h
src/: main.cpp
src/Game/: Game.cpp  Game.hpp
src/GameObject/: Ball.cpp  Ball.hpp  GameObject.cpp  GameObject.hpp  Paddle.hpp
src/Graphics/: Renderer.cpp  Renderer.hpp  Shader.cpp  Shader.hpp  fragment.frag  fragment.fsh  vertex.vert  vertex.vsh
src/Graphics/Shader/: Shader.cpp
src/Input/: Input.cpp  Input.hpp
src/Time/: Time.cpp  Time.hpp
src/Window/: Window.cpp  Window.hpp
